# jpfibo

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: real_data_loss.py  semantic_loss.py
docs/: building-trajectory.md  governance-status.md  information-boundary.md  modeling-principles.md  semantic-loss-benchmark.md  vision.md
examples/: borrowings-invalid.ttl  borrowings-valid.ttl  commercial-paper-invalid.ttl  commercial-paper-valid.ttl  main-bank-candidate-invalid.ttl  main-bank-candidate-valid.ttl  major-shareholder-invalid.ttl  major-shareholder-valid.ttl  policy-shareholding-invalid.ttl  policy-shareholding-valid.ttl
ontology/: fibo-jp-core.ttl  jfibo-core.ttl  jfibo-disclosure-claim.ttl  jfibo-document-type.ttl  jfibo-edinet-alignment.ttl  jfibo-holder-role.ttl  jfibo-information-status.ttl  jfibo-institutional-context.ttl  jfibo-normative-status.ttl  jfibo-reporting-regime.ttl  jfibo.ttl  jpfibo-core.ttl  jpfibo-disclosure-claim.ttl  jpfibo-document-type.ttl  jpfibo-edinet-alignment.ttl  jpfibo-holder-role.ttl  jpfibo-information-status.ttl  jpfibo-institutional-context.ttl  jpfibo-normative-status.ttl  jpfibo-reporting-regime.ttl  jpfibo.ttl
registry/: contributors.yaml  entities.yaml  terms.yaml
scripts/: build_edinet_focus.py  build_ontology.py  build_trajectory.py  download_edinet_taxonomy.py  edinet_client.py  entity_resolver.py  extract_xbrl_facts.py  find_target_filings.py  materialize_claims.py  parse_borrowings.py  parse_major_shareholders.py  validate.py
shapes/: jfibo-shapes.ttl  jpfibo-shapes.ttl
tests/: conftest.py  (+8 more)
(+33 files in other folders)
