[project]
name = "jfibo"
version = "0.5.0"
description = "Japanese-finance extension of FIBO: ontology, SHACL shapes, EDINET alignment, and benchmark."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Anthony W. Jung" }]
dependencies = [
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pyshacl>=0.31.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rdflib>=7.6.0",
    "requests>=2.34.2",
]
